# LineNav

./: .gitignore  Cargo.toml  README.md
src/: counter_walker.rs  line_counter.rs  line_processor.rs  main.rs  result_printer.rs  summarizer.rs
src/counter_walker/: walk_path_result.rs
src/line_processor/: plain_line_processor.rs
src/result_printer/: debug_result_printer.rs  noop_result_printer.rs  simple_result_printer.rs  verbose_result_printer.rs
src/summarizer/: default_summarizer.rs  leaderboard_summarizer.rs  noop_summarizer.rs
