[package]
name = "line_counter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chardet = "0.2.4"
clap = { version = "4.3.11", features = ["derive"] }
encoding_rs = "0.8.32"
encoding_rs_io = "0.1.7"
walkdir = "2.3.3"
