[package]
name = "line_counter"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lnav"  # Modify this line with your desired binary name
path = "src/main.rs"     # Path to the binary's main source file

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
chardet = "0.2.4"
clap = { version = "4.3.11", features = ["derive"] }
encoding_rs = "0.8.32"
encoding_rs_io = "0.1.7"
humansize = "2.1.3"
num-format = "0.4.4"
prettytable-rs = "0.10.0"
walkdir = "2.3.3"
